--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
+    "react-table": "^7.8.0",
     "tailwindcss": "3.3.2"
   }
 }
